--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ font-size: 40px;
 }
 
 .line-text{
+padding-top: 10px;
 font-size: 15px;
 }
 
@@ -181,6 +182,7 @@ justify-content: stretch;
 display:flex;
 align-items:baseline; 
 justify-content:space-around; 
+padding-bottom: 40px;
 }
 
 /*Логотипы*/
@@ -237,9 +239,36 @@ align-items:center;
 justify-content:space-around;
 flex-direction: column; 
 }
-
+/*Социальные кнопки*/
 .social-footer{
 display:flex;
 align-items:stretch;
 justify-content:space-around; 
 } 
+
+/*Кнопки навигации в каталоге*/
+.pagination-list{
+width: 300px;
+display:flex;
+align-items:stretch;
+justify-content:space-around; 
+} 
+
+.pagination-list-1{
+list-style: none;
+display:inline-block;
+padding-left: 0px;
+margin-left: 0px;
+}
+
+.pagination-list-2{
+list-style: none;
+}
+
+.pagination-list-3{
+list-style: none;
+}
+
+.pagination-list-4{
+list-style: none;
+}
