--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body {
+  position: relative;
+  width: 1350px;
   margin: 0;
   padding: 0;
 
@@ -143,12 +145,27 @@ background-color: #eeeeee;
 
 .static-title{
 }
-
+/*Колонка с приемуществами*/
 .numbers{
   font-size: 10,06px;
   font-weight: 700;
   line-height: 20px;
 color: rgb(0,0,0);
+}
+
+.cell-1{
+padding-top: 15px;
+padding-right: 10px;
+}
+
+.cell-2{
+padding-top: 15px;
+padding-right: 10px;
+}
+
+.cell-3{
+padding-top: 15px;
+padding-right: 10px;
 }
 
 .line-numbers{
@@ -193,20 +210,34 @@ align-items:stretch;
 justify-content:space-around;
 } 
 
-/*Карта*/
+/*Карта на главной*/
 .map{
 display:flex;
 align-items:stretch; 
 justify-content:space-around;
+flex-direction: column;
 } 
 
 /*Подвал*/
+
+
 .footer-social{
+width: 400px;
+position: relative;
+left: -50px;
 display:flex;
 align-items:center;
-justify-content:space-around; 
+justify-content:space-between; 
+position: relative;
+left: -62px;
 } 
 
+.footer-text{
+position: relative;
+right: 300px;
+}
+
+}
 /*Каталог*/
 .catalog{
 display:flex;
