--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ margin: 0 auto;
 display:flex;
 align-items:stretch; 
 
-justify-content:space-around; 
+justify-content:space-between; 
 }
 
 .site-navigation{
